--- a/preamble.tex
+++ b/preamble.tex
@@ -11,6 +11,7 @@
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
+\newtheorem{corollary}{Corollary}[theorem]
 \newtheorem*{example}{Example}
 
 %\binoppenalty=10000 
