--- a/sections/probability/metric.tex
+++ b/sections/probability/metric.tex
@@ -161,7 +161,7 @@ where we used the fact that
 \end{equation}
 Since we know that any $g_{ij}^{(D)}$ is positive semi-definite, $g_{ij}^{(S)}$ will be positive definite if and only if it is invertible. It can be easily shown that if the functions $\partial_ip(x;\theta)$ are linearly independent, then $g_{ij}^{(S)}$ is invertible and thus positive definite\todo{proof?}. Thus, relative entropy is a divergence and in fact, it is also known as \emph{Kullback-Leibler divergence} or \emph{information divergence}.
 
-Finally, then, $g_{ij}^{(S)}$ defines a metric tensor and it is known as the \emph{Fisher information metric}. This is, up to a constant factor, the unique metric induced by the relative entropy, and it plays a focal role for the geometrical modeling and interpretation of statistics.
+Finally, then, $G_F\coloneqq\{g_{ij}^{(S)}\}$ defines a metric tensor at every point and it is known as the \emph{Fisher information metric}. This is, up to a constant factor, the unique metric induced by the relative entropy, and it plays a focal role for the geometrical modeling and interpretation of statistics.
 
 \section{The geometry of $\mathcal{P}$}
 The Fisher metric defines the inner product $\langle\,\cdot\,,\,\cdot\,\rangle_p$ between tangent vectors of a point $p\in\mathcal{P}$. Let us now express this inner product through the representations we defined in \cref{ch:tgt-space}. Given two tangent vectors $X,Y\in T_p\mathcal{P}$ from \cref{eq:fisher-exp} we find that
