--- a/preamble.tex
+++ b/preamble.tex
@@ -28,5 +28,5 @@
 \WarningFilter[ref]{latex}
   {There were undefined references }
 
-\ActivateWarningFilters[ref]
-\ActivateWarningFilters[todo]
+%\ActivateWarningFilters[ref]
+%\ActivateWarningFilters[todo]
