--- a/sections/probability.tex
+++ b/sections/probability.tex
@@ -1,5 +1,5 @@
 \part{Geometry of probability distributions}
-Quantum states, as we will see, can be thought of as a generalization of probability distributions. In this chapter, we will study probability distributions from a geometrical point of view, and in this framework, we shall prove the Cramer-Rao bound. We will only consider probability distributions defined on finite sample spaces since this is all we need for finite-dimensional pure quantum states; nevertheless, in \ref{} generalization to countable sample spaces will be discussed briefly.
+Quantum states, as we will see, can be thought of as a generalization of probability distributions. In this chapter, we will study probability distributions from a geometrical point of view, and in this framework, we shall prove the Cramer-Rao bound. We will only consider probability distributions defined on finite sample spaces since this is all we need for finite-dimensional pure quantum states.
 
 \input{sections/probability/manifold.tex}
 \input{sections/probability/metric.tex}
