--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage[italian,english]{babel}
 %\usepackage{toptesi}
 \usepackage{xcolor}
+\usepackage{braket}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amssymb}
@@ -12,6 +13,7 @@
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{postulate}{Postulate} \setcounter{postulate}{-1}
 \newtheorem*{example}{Example}
 
 %\binoppenalty=10000 
