--- a/preamble.tex
+++ b/preamble.tex
@@ -12,8 +12,11 @@
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
+\crefname{theorem}{theorem}{theorems}
 \newtheorem{corollary}{Corollary}[theorem]
+\crefname{corollary}{Corollary}{corollaries}
 \newtheorem{postulate}{Postulate} \setcounter{postulate}{-1}
+\crefname{postulate}{postulate}{postulates}
 \newtheorem*{example}{Example}
 
 %\binoppenalty=10000 
