geometry and fibre bundle

--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -7,5 +7,5 @@
 \tableofcontents
 \input{chapters/probability.tex}
 \input{chapters/quantum.tex}
-\input{chapters/appendix.tex}
+%\input{chapters/appendix.tex}
 \end{document}
