--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -7,5 +7,6 @@
 \tableofcontents
 \input{chapters/probability.tex}
 \input{chapters/quantum.tex}
+\input{chapters/quant-inf.tex}
 %\input{chapters/appendix.tex}
 \end{document}
