--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,9 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
+\usepackage{MnSymbol}
 \usepackage{cleveref}
+
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
