quant cramer-rao

--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,8 @@
 \crefname{theorem}{theorem}{theorems}
 \newtheorem{corollary}{Corollary}[theorem]
 \crefname{corollary}{Corollary}{corollaries}
+\newtheorem{lemma}{Lemma}
+\crefname{lemma}{lemma}{lemmas}
 \newtheorem{postulate}{Postulate} \setcounter{postulate}{-1}
 \crefname{postulate}{postulate}{postulates}
 \newtheorem*{example}{Example}
